<resources>
    <string name="app_name">MySales</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="email_id">Email</string>
    <string name="password">Password</string>
    <string name="hint">hint</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android App</string>
    <string name="nav_header_subtitle">bhushanofficial23@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="select_parrty">Select Party</string>
    <string name="register">Register</string>
    <string name="new_user_registration">New User Registration</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender :</string>
    <string name="select_deal_term">Select Deal Term</string>
    <string name="select_godown">Select Godown</string>
    <string name="booking_date">Booking Date</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="quantity_mt">Quantity (MT)</string>
    <string name="rate">Rate</string>
    <string name="freight_rate">Freight Rate</string>

    <string name="select_grade">Select Grade</string>
    <string name="select_payment_terms">Select Payment Terms</string>
    <string name="remark">Remark</string>

    <string name="valid_date">Valid Date</string>
    <string name="valide_date">Valide Date</string>
    <string name="submit">Submit</string>

    <string-array name="Godown">
        <item>Pune</item>
        <item>Mumbai</item>
        <item>Dhule</item>
        <item>Nandurbar</item>
    </string-array>

    <string-array name="company">
        <item>Google</item>
        <item>Facebook</item>
        <item>Instagram</item>
        <item>Twitter</item>
        <item>apple</item>
        <item>vivo</item>
        <item>oppo</item>

    </string-array>

</resources>