<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSalesOrder"
    android:layout_margin="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="ExtraText">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_godown"/>

        <Spinner
            android:id="@+id/godownList"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/style_spinner"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:entries="@array/Godown"
            android:spinnerMode="dropdown"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_parrty"/>
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/text_view_list_item"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/select_parrty"-->
<!--            android:focusable="true"-->
<!--            android:focusableInTouchMode="true"-->
<!--            android:layout_marginBottom="5dp"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="15sp"-->
<!--            android:visibility="visible"-->
<!--            android:inputType="text"-->
<!--            />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->


        <AutoCompleteTextView
            android:id="@+id/autoText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/auto_text_bg"
            android:hint="@string/select_parrty"
            android:textSize="15sp"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/select_parrty"
            android:id="@+id/search_dialog"
            android:padding="12dp"
            android:background="@drawable/style_spinner"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_deal_term"/>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@drawable/style_spinner"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:entries="@array/Godown"
            android:spinnerMode="dropdown"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking_date"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/selectDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dd_mm_yyyy"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:visibility="visible"
            android:inputType="text"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_mt"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_mt"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:visibility="visible"
            android:inputType="text"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rate"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:visibility="visible"
            android:inputType="text"
            />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/freight_rate"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/freightRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/freight_rate"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:visibility="visible"
            android:inputType="text"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_grade"/>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@drawable/style_spinner"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:entries="@array/Godown"
            android:spinnerMode="dropdown"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_payment_terms"/>

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@drawable/style_spinner"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:entries="@array/Godown"
            android:spinnerMode="dropdown"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remark"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/remark"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:visibility="visible"
            android:inputType="text"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valid_date"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/validDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valide_date"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:visibility="visible"
            android:inputType="text"
            />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="22sp"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:background="@drawable/btn_round"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            tools:ignore="OnClick" />












    </LinearLayout>

</ScrollView>